--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -12,6 +12,7 @@ wgpu = { version = "0.11.0", features = ["trace", "replay"] }
 image = "0.23.14"
 winit = "0.25.0"
 cgmath = "0.18.0"
+vach = "0.2.1"
 pretty_env_logger = "0.4.0"
 log = "0.4.14"
 pollster = "0.2.4"
@@ -25,7 +26,7 @@ uuid = { version = "0.8.2", features = ["v5"] }
 serde = { version = "1.0.130", features = ["derive"] }
 crossbeam = "0.8.1"
 arc-swap = "1.4.0"
-
-[dependencies.vach]
-git = "https://github.com/zeskeertwee/vach"
-rev = "6f5d7af24279616bd71a9f68d4217e0213a4032c"
+egui = "0.15.0"
+egui_winit_platform = "0.11.0"
+egui_wgpu_backend = "0.14.0"
+epi = "0.15.0"
