it compiles again! also added the puffin profiler

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -30,9 +30,14 @@ egui_winit_platform = "0.13.0"
 egui_wgpu_backend = "0.16.0"
 epi = "0.16.0"
 dashmap = "5.0.0"
+bevy_ecs = "0.7.0"
 
-wasmtime = "0.33.0"
-wasmtime-wasi = "0.33.0"
+wasmtime = "14.0.4"
+wasmtime-wasi = "14.0.4"
+
+puffin = "0.13.0"
+puffin_egui = "0.13.0"
+puffin_http = "0.10.0"
 
 [dependencies.vach]
 git = "https://github.com/zeskeertwee/vach"
