--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -30,9 +30,9 @@ egui_winit_platform = "0.13.0"
 egui_wgpu_backend = "0.16.0"
 epi = "0.16.0"
 dashmap = "5.0.0"
-bevy_ecs = "0.7.0"
+bevy_ecs = "0.12.0"
 
-mlua = { version = "0.9.1", features = ["luau", "vendored"] }
+mlua = { version = "0.9.1", features = ["luau", "vendored", "send"] }
 
 puffin = "0.13.0"
 puffin_egui = "0.13.0"
